# Model-Relative-Semantic-Filesystems

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ENV_CONFIG.md  LICENSE  MANIFEST.in  PROVIDER_SUPPORT.md  README.md  VERIFICATION_REPORT.md  demo_novelty.py  examples.py  mrsf_benchmark_full.py  pyproject.toml  quickstart.py  rag_experiment.py  requirements.txt  setup.py  verify_reddit_claims.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  beir_eval.py
mrsf/: __init__.py  benchmark.py  core.py  embeddings.py  inspect.py  storage.py
pymrsf/: __init__.py  benchmark.py  cache.py  chunker.py  core.py  embeddings.py  inspect.py  probe.py  rag.py  storage.py
pymrsf/experimental/: storage.py
src/pymrsf/: __init__.py  cache.py  chunker.py  core.py  embeddings.py  probe.py  rag.py  types.py
tests/: __init__.py  conftest.py  test_async.py  test_cache.py  test_cache_perf.py  test_chunker_perf.py  test_config.py  test_core.py  test_fixes.py  test_integration.py  test_local.py  test_probe.py  test_rag.py
tests/experimental/: test_roundtrip.py
