[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymrsf"
version = "0.3.0"
description = "Model-Relative Semantic Filesystems — LLM-native file routing and compression"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Eric Monthe"}]
requires-python = ">=3.9"
keywords = ["semantic", "filesystem", "llm", "embeddings", "file-routing", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "msgpack>=1.0.0",
    "llama-cpp-python>=0.2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/riiseup08/mrsf"

[tool.hatch.build.targets.wheel]
packages = ["pymrsf"]
[tool.hatch.build]
exclude = [
    "*.db",
    "*.faiss",
    "*.faiss.meta",
    "*.tar.gz",
    "*.log",
    "*.csv",
    "dist/",
    "venv/",
]