[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymrsf"
version = "0.5.0"
description = "Model-Relative Semantic Filtering — Novelty-aware RAG chunk scoring using language model surprise signals"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "pymrsf contributors"}
]
keywords = ["rag", "retrieval", "semantic", "nlp", "llm", "embeddings", "novelty", "surprise"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
local = [
    "llama-cpp-python>=0.2.0",
]
openai = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
]
anthropic = [
    "anthropic>=0.25.0",
]
all = [
    "llama-cpp-python>=0.2.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "anthropic>=0.25.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pymrsf"
Documentation = "https://github.com/yourusername/pymrsf#readme"
Repository = "https://github.com/yourusername/pymrsf"
Issues = "https://github.com/yourusername/pymrsf/issues"

[project.scripts]
pymrsf = "pymrsf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pymrsf = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
asyncio_mode = "auto"
